feat: added DashboardFrame